src/test/regression_testing/test_files/java/NPD/bad/Test05.java
package bad;
import java.util.ArrayList;

public class Test05 {
    static ArrayList<String> names;

    public static void test5_main(String[] args) {
        names.add("Dominic");
        System.out.println("Name length: " + names.size());
    }
}